--- a/dataset/data_config.yaml
+++ b/dataset/data_config.yaml
@@ -1,6 +1,6 @@
 testset:
-  source_folder: '/homes/fsc01/proj/wavetest' #path to a directory containing folders with instrument names
-  instruments: ['violin','flute','trumpet']
+  source_folder: '/homes/fsc01/proj/wavetest' # Path to a directory containing folders with instrument names
+  instruments: ['violin','flute','trumpet']   # Specify names of the folders in test set
   contiguous: True                            # Do not 'chop' into instances, generate a single contiguous instance extracted from audio.
   clip_noise: True                            # Clip loudness back to -80db when f0 is over 1900 (avoids crepe to track noise)
   input_dir: 'files/test'
@@ -20,9 +20,9 @@ data_processor:
   _target_: create_data.ProcessData
   silence_thresh_dB: 40
   sr: 16000
-  device: 'cpu'                      # Torch Device ID
+  device: 'cuda:0'                      # Torch Device ID
   crepe_params:
-    model: 'tiny'                       # use 'full' for dataset generation - 'tiny' also available
+    model: 'full'                       # use 'full' for dataset generation - 'tiny' also available
     confidence_threshold: 0.80          # used 0.80 for flute, and 0.85 for violin and trumpet
     batch_size: 128
     fmin: 50
@@ -31,17 +31,17 @@ data_processor:
     nfft: 2048
   rms_params:
     frame_size: 2048
-  hop_size: 64                           # hop size in samples for crepe and loudness
+  hop_size: 64                           # hop size in samples for CREPE, RMS, or loudness
   max_len: 4                             # Maximum block len ( in seconds )
   seq_len: 3                             # Minimum block len (in seconds) -> block is padded to fit max_len
-  debug: True                            # Verbose
+  debug: False                           # Verbose
   center: False                          # True: Center loudness and pitch window before computing. False: Pad at the end.
 
 hydra:
   run:
     dir: outputs/null
 
-process_urmp: True
-process_testset: True
-dont_process: False # Skip processing
-dont_copy: False    # Skip file copying
+process_urmp: True      # Process URMP.
+process_testset: True   # Process external test set.
+skip_copy: False        # Skip file copying (if you have already done so)
+skip_process: False     # Dry run.
