--- a/dataset/data_config.yaml
+++ b/dataset/data_config.yaml
@@ -1,3 +1,4 @@
+# Additional Dataset process options
 testset:
   source_folder: '/homes/fsc01/proj/wavetest' # Path to a directory containing folders with instrument names
   instruments: ['violin','flute','trumpet']   # Specify names of the folders in test set
@@ -6,11 +7,14 @@ testset:
   input_dir: 'files/test'
   output_dir: 'data/test'
 
+
+# URMP Dataset process options
 urmp:
   source_folder: '/homes/fsc01/proj/URMP/Dataset' # path to urmp dataset finishing in ... "/URMP/Dataset"
   instruments:  #URMP IDs of instruments
     'vn': 'violin'
     'tpt': 'trumpet'
+    'fl' : flute
   mono_regex: 'AuSep'
   num_workers: 4
   input_dir: 'files/train'
@@ -18,8 +22,8 @@ urmp:
 
 data_processor:
   _target_: create_data.ProcessData
-  silence_thresh_dB: 40
-  sr: 16000
+  silence_thresh_dB: 40                 # Silence threshold for splitting instances.
+  sr: 16000                             # Sample rate
   device: 'cuda:0'                      # Torch Device ID
   crepe_params:
     model: 'full'                       # use 'full' for dataset generation - 'tiny' also available
@@ -42,6 +46,6 @@ hydra:
     dir: outputs/null
 
 process_urmp: True      # Process URMP.
-process_testset: True   # Process external test set.
+process_testset: True   # Process additional testset.
 skip_copy: False        # Skip file copying (if you have already done so)
 skip_process: False     # Dry run.
